--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "ngFx": "~1.1.0",
     "animate.css": "~3.4.0",
     "angular-youtube-mb": "~1.1.0",
-    "angular-timer": "~1.3.3"
+    "angular-timer": "~1.3.3",
+    "ionicons": "~2.0.1"
   }
 }
