--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "ngFx": "~1.1.0",
     "animate.css": "~3.4.0",
     "angular-youtube-mb": "~1.1.0",
-    "angular-timer": "~1.3.3",
-    "ionicons": "~2.0.1"
+    "ionicons": "~2.0.1",
+    "angular-moment": "~0.10.3",
+    "FlipClock": "~0.7.7"
   }
 }
