--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ public/scripts/admin/admin_components
 
 # Minimified files
 public/css/style.css
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
